<resources>
    <string name="app_name">TestDriving</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="main_ll_test">考试</string>
    <string name="main_textview_weal">福利</string>
    <string name="main_textview_community">社区</string>
    <string name="main_textview_find">发现</string>
    <string name="main_textview_buy_car">购车</string>
</resources>
